' Generated by UML Generator
' Encoded: fLJ1JkCm4BtdAtmiQeFsN2qL82g1r8LAPRM7rHwCCnGlZbtPJb4MyUyxTch7JiA9IoI_6RzvC_ESIsEfjaqj2lFAvO5gMXCcg35Nrch-r5YuOqhk-3yWtueNNW5XN3C1HU6po5Qhly0iUIy8AG_TuQvQaXtUbdi7-W8trCAIkA-3G5Ov8BYn3y_h-Y1K2uXVQKtR3OBV0xOY5qJ2Mn9PpSxSrH8_yvCAZyJ3ICs23BGiIAO4Zr51gFirHd-RLbLWcqqKM9AZujKWqSHCCvaAnl8Q2rmtrHwmxoNXqhe0dhP1fOFZ7kOcZOmwIRYHOXUwSXId9Jc27X_qdKhh1Z2ukJwX-NYoedtlYEVBBpw2tmBK6IuCANTSGEzf3PaJgQ2wtOA-LOqE4okbUdZU03rYqWrjC_XHqoE85FLkYziyoqvZCRsXKYbecf6G1PcGqO6v25-IKS4QWGFy1V0gsfsdIqp0L8ql6HxLJDaNq9c3Uf-iezwHKPBGkAlfhRaEF-NnGPdCO62tT1v97sOOwWRN3I9ZkC-cbrCCOfMttoH37FMOe0zDtRUgQoiPG7JipnyRRzRvExuPoza7gIcNCwht9YJ__XEuy5RuewgoZ7ihektFprSzUecl2N_T_m4
' URL: http://www.plantuml.com/plantuml/uml/fLJ1JkCm4BtdAtmiQeFsN2qL82g1r8LAPRM7rHwCCnGlZbtPJb4MyUyxTch7JiA9IoI_6RzvC_ESIsEfjaqj2lFAvO5gMXCcg35Nrch-r5YuOqhk-3yWtueNNW5XN3C1HU6po5Qhly0iUIy8AG_TuQvQaXtUbdi7-W8trCAIkA-3G5Ov8BYn3y_h-Y1K2uXVQKtR3OBV0xOY5qJ2Mn9PpSxSrH8_yvCAZyJ3ICs23BGiIAO4Zr51gFirHd-RLbLWcqqKM9AZujKWqSHCCvaAnl8Q2rmtrHwmxoNXqhe0dhP1fOFZ7kOcZOmwIRYHOXUwSXId9Jc27X_qdKhh1Z2ukJwX-NYoedtlYEVBBpw2tmBK6IuCANTSGEzf3PaJgQ2wtOA-LOqE4okbUdZU03rYqWrjC_XHqoE85FLkYziyoqvZCRsXKYbecf6G1PcGqO6v25-IKS4QWGFy1V0gsfsdIqp0L8ql6HxLJDaNq9c3Uf-iezwHKPBGkAlfhRaEF-NnGPdCO62tT1v97sOOwWRN3I9ZkC-cbrCCOfMttoH37FMOe0zDtRUgQoiPG7JipnyRRzRvExuPoza7gIcNCwht9YJ__XEuy5RuewgoZ7ihektFprSzUecl2N_T_m4
' Generated on: 2025-11-02T14:21:57.343053600

@startuml
skinparam classAttributeIconSize 0
hide circle

class Project {
  -projectId: String
  -startDate: Date
  -endDate: Date
  -listOfEmployee: ArrayList<Employee> = new ArrayList<>()
  --
  +Project()
  +Project(projectId: String, startDate: Date, endDate: Date, employee: Employee)
  +Project(projectId: String, startDate: Date, endDate: Date)
  +addEmployee(employee: Employee): void
  +addEmployees(employees: Employee): void
  +estimateBudget(): int
  +getProjectId(): String
  +setProjectId(projectId: String): void
  +getStartDate(): Date
  +setStartDate(startDate: Date): void
  +endDate(): Date
  +setEndDate(endDate: Date): void
  +getEmployees(): List<Employee>
}

class Employee {
  -employeeId: String
  -employeeName: String
  -salaryPerHour: int
  -noOfLeavingDay: int
  -noOfTravelDay: int
  --
  +Employee()
  +Employee(employeeId: String, employeeName: String, salaryPerHour: int, noOfLeavingDay: int, noOfTravelDay: int)
  +calculateWeeklySalary(): int
  +compareTo(other: Employee): int
  +getEmployeeId(): String
  +setEmployeeId(employeeId: String): void
  +getEmployeeName(): String
  +setEmployeeName(name: String): void
  +getSalaryPerHour(): int
  +setSalaryPerHour(salary: int): void
  +getNoOfLeavingDay(): int
  +setNoOfLeavingDay(date: int): void
  +getNoOfTravelDay(): int
  +setNoOfTravelDay(date: int): void
  +toString(): String
}

class UML {
  +{static} main(args: String[]): void
}

Project o-- Employee
Employee ..> Employee
@enduml